# svanill-vault

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
svanill-vault-cli/: .gitignore  Cargo.toml  README.md  openapi3.yml  regenerate_models.sh
svanill-vault-cli/src/: config.rs  lib.rs  utils.rs
svanill-vault-cli/src/commands/: pull.rs
svanill-vault-cli/src/sdk/: auth.rs  files.rs  ls.rs  mod.rs  response_error.rs
svanill-vault-cli/tests/: cli.rs
svanill-vault-openapi/: Cargo.toml  README.md  openapi3.yml  regenerate_models.sh  rustfmt.toml
svanill-vault-openapi/src/: lib.rs
svanill-vault-openapi/src/models/: answer_user_challenge_request.rs  answer_user_challenge_response.rs  answer_user_challenge_response_content.rs  answer_user_challenge_response_links.rs  ask_for_the_challenge_response.rs  ask_for_the_challenge_response_content.rs  ask_for_the_challenge_response_links.rs  create_user_request.rs  create_user_response.rs  create_user_response_content.rs  create_user_response_links.rs  delete_user_response.rs  delete_user_response_links.rs  get_starting_endpoints_response.rs  get_starting_endpoints_response_links.rs  hateoas_answer_auth_challenge.rs  hateoas_create_user.rs  hateoas_file_delete.rs  hateoas_file_read.rs  hateoas_file_retrieve_url.rs  hateoas_file_upload_url.rs  hateoas_files_list.rs  hateoas_request_auth_challenge.rs  hateoas_request_upload_url.rs  mod.rs  remove_file_response.rs  request_upload_url_request_body.rs  request_upload_url_response.rs  request_upload_url_response_links.rs  retrieve_list_of_user_files_response.rs  retrieve_list_of_user_files_response_content_item.rs  retrieve_list_of_user_files_response_content_item_content.rs  retrieve_list_of_user_files_response_content_item_links.rs
svanill-vault-server/: .gitignore  CHANGELOG  Cargo.toml  README.md  add-dev-user.sh  build.rs  openapi3.yml  regenerate_models.sh
svanill-vault-server/migrations/2020-07-04-065045_create_table_user/: up.sql
svanill-vault-server/src/: auth.rs  auth_token.rs  errors.rs  file_server.rs  lib.rs  post_policy.rs  rusoto_extra.rs  server.rs
svanill-vault-server/src/auth/: auth_token.rs  mod.rs  tokens_cache.rs
svanill-vault-server/src/db/: actions.rs  mod.rs  models.rs  schema.rs
svanill-vault-server/src/http/: auth_middleware.rs  handlers.rs  mod.rs  sentry_middleware.rs
svanill-vault-server/src/openapi_models/: answer_user_challenge_response.rs  ask_for_the_challenge_response_content.rs  create_user_request.rs  create_user_response.rs  get_starting_endpoints_response_links.rs  hateoas_file_delete.rs  hateoas_file_read.rs  hateoas_file_retrieve_url.rs  hateoas_file_upload_url.rs  hateoas_files_list.rs  remove_file_response.rs  request_upload_url_request_body.rs  retrieve_list_of_user_files_response_content_item.rs  retrieve_list_of_user_files_response_content_item_links.rs
svanill-vault-server/tests/: server.rs
