[package]
name = "svanill-vault-cli"
description = "A command line tool to access svanill-vault"
version = "0.1.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2018"
repository = "https://github.com/svanill/svanill-vault-cli"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
svanill-vault-openapi = { path = "../svanill-vault-openapi", version = "0.1" }
structopt = "0.3.26"
atty = "0.2.14"
anyhow = "1.0.70"
thiserror = "1.0.44"
reqwest = { version = "0.11.18", default-features = false, features=["blocking", "gzip", "json", "multipart", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.95"
confy = "0.5.1"
rand = "0.8.5"
md-5 = "0.10.5"
mockito = "0.31.1"
assert_cmd = "2.0.11"
