[package]
name = "svanill-vault-cli"
description = "A command line tool to access svanill-vault"
version = "0.1.2"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2021"
repository = "https://github.com/svanill/svanill-vault-cli"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
svanill-vault-openapi = { path = "../svanill-vault-openapi", version = "0.1" }
structopt = "0.3.26"
atty = "0.2.14"
anyhow = "1.0.96"
thiserror = "2.0.11"
reqwest = { version = "0.11.27", default-features = false, features=["blocking", "gzip", "json", "multipart", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
confy = "0.6.1"
rand = "0.9.0"
md-5 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0.16"
mockito = "1.6.1"
