[package]
name = "svanill-vault-openapi"
version = "0.1.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2018"
repository = "https://github.com/svanill/svanill-vault-openapi"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]

[dependencies.serde]
version = "1.0"
features = ["derive"]
