[package]
name = "svanill-vault-server"
description = "svanill-vault, the server"
version = "0.6.2"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
repository = "https://github.com/svanill/svanill-vault-server"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
svanill-vault-openapi = { path = "../svanill-vault-openapi", version = "0.1" }
actix-web = { version = "4.4.1", features = ["rustls"] }
actix-http = "3.5.1"
actix-cors = "0.6.5"
actix-web-httpauth = "0.8.1"
env_logger = "0.10.1"
structopt = "0.3.26"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
serde = "1.0.156"
serde_json = "1.0.99"
serde_derive = "1.0.130"
thiserror = "1.0.39"
ring = "0.16.20"
hex = "0.4.3"
lru-cache = "0.1.2"
futures = "0.3.30"
anyhow = "1.0.70"
log = "0.4.17"
base64 = "0.21.0"
hmac = "0.12.1"
sha2 = "0.10.6"
color-backtrace = "0.6.1"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "gzip", "multipart", "json", "rustls-tls", "rustls-tls-webpki-roots"] }
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = { version = "0.24.0", features = ["webpki-roots", "http2"] }
sentry-actix = "0.32.1"
async-trait = "0.1.76"
aws-config = "1.1.1"
aws-credential-types = "1.1.1"
aws-sigv4 = "1.1.1"
aws-types = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-smithy-client = "0.60.1"
aws-smithy-types = "1.1.1"
http = "0.2.9"

[dependencies.sentry]
version = "0.32.1"
default-features = false
features = ["rustls", "backtrace", "contexts", "panic", "reqwest", "tracing"]

[dev-dependencies]
aws-smithy-http = "0.60.1"
aws-smithy-runtime = { version = "1.1.1", features=["client", "test-util"] }
aws-sdk-iam = "1.9.1"
tokio = "1.26.0"
ctor = "0.2.6"
actix-rt = "2.9.0"

[profile.release]
debug = true
