[package]
name = "svanill-vault-server"
description = "svanill-vault, the server"
version = "0.6.4"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
repository = "https://github.com/svanill/svanill-vault-server"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
svanill-vault-openapi = { path = "../svanill-vault-openapi", version = "0.1" }
actix-web = { version = "4.4.1", features = ["rustls", "http2"] }
actix-http = "3.5.1"
actix-cors = "0.6.5"
actix-web-httpauth = "0.8.1"
env_logger = "0.10.2"
structopt = "0.3.26"
diesel = { version = "2.1.6", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
serde = "1.0.204"
serde_json = "1.0.121"
serde_derive = "1.0.130"
thiserror = "1.0.63"
ring = "0.17.7"
hex = "0.4.3"
lru-cache = "0.1.2"
futures = "0.3.30"
anyhow = "1.0.86"
log = "0.4.21"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
color-backtrace = "0.6.1"
reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "gzip", "multipart", "json", "rustls-tls", "rustls-tls-webpki-roots"] }
sentry-actix = "0.34.0"
async-trait = "0.1.80"
aws-config = "1.1.4"
aws-credential-types = "1.2.0"
aws-sigv4 = "1.2.2"
aws-types = "1.3.3"
aws-sdk-s3 = "1.14.0"
aws-smithy-types = "1.1.1"
http = "0.2.9"

[dependencies.sentry]
version = "0.32.2"
default-features = false
features = ["rustls", "backtrace", "contexts", "panic", "reqwest", "tracing"]

[dev-dependencies]
aws-smithy-http = "0.60.9"
aws-smithy-runtime = { version = "1.6.2", features=["client", "test-util"] }
tokio = "1.26.0"
ctor = "0.2.6"
actix-rt = "2.9.0"

[profile.release]
debug = true
