[package]
name = "svanill-vault-server"
description = "svanill-vault, the server"
version = "0.6.5"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
repository = "https://github.com/svanill/svanill-vault-server"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
svanill-vault-openapi = { path = "../svanill-vault-openapi", version = "0.1" }
actix-web = { version = "4.10.2", features = ["rustls", "http2"] }
actix-http = "3.10.0"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.2"
env_logger = "0.10.2"
structopt = "0.3.26"
diesel = { version = "2.2.10", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.130"
thiserror = "2.0.11"
ring = "0.17.14"
hex = "0.4.3"
lru-cache = "0.1.2"
futures = "0.3.31"
anyhow = "1.0.98"
log = "0.4.26"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
color-backtrace = "0.7.0"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "gzip", "multipart", "json", "rustls-tls", "rustls-tls-webpki-roots"] }
sentry-actix = "0.37.0"
async-trait = "0.1.88"
aws-config = "1.1.4"
aws-credential-types = "1.2.3"
aws-sigv4 = "1.3.2"
aws-types = "1.3.7"
aws-sdk-s3 = "1.14.0"
aws-smithy-types = "1.1.1"
http = "1.3.1"

[dependencies.sentry]
version = "0.37.0"
default-features = false
features = ["rustls", "backtrace", "contexts", "panic", "reqwest", "tracing"]

[dev-dependencies]
aws-smithy-http = "0.62.1"
aws-smithy-runtime = { version = "1.8.3", features=["client", "test-util"] }
tokio = "1.44.2"
ctor = "0.4.2"
actix-rt = "2.10.0"

[profile.release]
debug = true
